Login api created with JWT
