# Backend/online-auth-service/middleware/swagger.yaml
@@ -61,6 +61,55 @@ paths:
                   'message': 'Some Error Message',
                   'path': '/api/auth/register',
                 }
+  /api/auth/login:
+    post:
+      summary: User Login API
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/LoginRequestBody'
+              type: object
+              properties:
+                email:
+                  type: string
+                  example: mahesh.nidugala@gmail.com
+                password:
+                  type: string
+                  example: example
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/LoginSuccessResponse'
+              example: { 'token': 'hkhjsjy536sjs78738989bjus98' }
+        '400':
+          description: BAD REQUEST
+          content:
+            application/json:
+              example:
+                {
+                  'timestamp': '2024-01-17T02:40:35.512Z',
+                  'status': 400,
+                  'error': 'Bad Request',
+                  'message': 'Invalid Json Format or Request body missing',
+                  'path': '/api/auth/login',
+                }
+        '500':
+          description: INTERNAL SERVER ERROR
+          content:
+            application/json:
+              example:
+                {
+                  'timestamp': '2024-01-17T02:40:35.512Z',
+                  'status': 500,
+                  'error': 'Internal Server Error',
+                  'message': 'Some Error Message',
+                  'path': '/api/auth/login',
+                }
 components:
   schemas:
     RegistrationRequestBody:
@@ -83,4 +132,16 @@ components:
         message:
           type: string
         username:
+          type: string
+    LoginRequestBody:
+      type: object
+      properties:
+        email:
+          type: string
+        password:
+          type: string
+    LoginSuccessResponse:
+      type: object
+      properties:
+        token:
           type: string
